--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,25 @@ body {
   margin: 20px;
   font: 32px 'Zen Dots', cursive;
 }
+
+.game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.board-row {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.square {
+  background-color: #444;
+  color: white;
+  border: 1px solid #999;
+  padding: 0;
+  font-size: 84px;
+  text-align: center;
+  width: 100px;
+  height: 100px;
+}
