--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 body {
   background-color: #000;
   color: white;
   margin: 20px;
-  font: 32px 'Zen Dots', cursive;
+  font: 32px 'Indie Flower', cursive;
 }
 
 .game {
