add tacking turns and winner display, add calculateWinner function

--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,19 @@ body {
   color: white;
   border: 1px solid #999;
   padding: 0;
-  font-size: 84px;
-  text-align: center;
+  font-size: 70px;
+  text-align: top;
   width: 100px;
   height: 100px;
+  font-family: 'Indie Flower', cursive;
 }
 
 .square:focus {
   outline: none;
   background: #222;
+}
+
+.status {
+  margin: 20px;
+  font-size: 24px;
 }
