add footer and fontawesome icons

--- a/src/components/square/style.css
+++ b/src/components/square/style.css
@@ -2,7 +2,7 @@
 
 .square {
   background-color: #444;
-  color: white;
+  color: #fafafa;
   border: 1px solid #999;
   padding: 0;
   font-size: 70px;
