--- a/src/components/game/style.css
+++ b/src/components/game/style.css
@@ -26,7 +26,36 @@ button,
 /* xs - Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.99px) {
   .title {
-    margin-block-start: 0.7em;
-    margin-block-end: 0.7em;
+    margin-block-start: 3rem;
+    margin-block-end: 3rem;
+    font-size: 42px;
+  }
+
+  .game-container {
+    display: block;
+  }
+
+  .game-child:first-child {
+      margin-right: 0;
+  }
+
+  button,
+  ::marker {
+    font: 18px 'Indie Flower', cursive;
+    font-weight: bold;
+  }
+
+  .game-info {
+    margin-left: 3rem;
+    margin-bottom: 5rem;
+  }
+
+  .status {
+    margin-top: 2rem;
+    margin-bottom: 0;
+  }
+
+  .moves {
+    margin-top: 1rem;
   }
 }
