update style, responsiveness for sm devices

--- a/src/components/game/style.css
+++ b/src/components/game/style.css
@@ -59,3 +59,10 @@ button,
     margin-top: 1rem;
   }
 }
+
+/* sm - Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .game-child:first-child {
+      margin-right: 2rem;
+  }
+}
