update style, responsiveness for xxs devices

--- a/src/components/game/style.css
+++ b/src/components/game/style.css
@@ -23,8 +23,45 @@ button,
   font-weight: bold;
 }
 
+/* xxs - Double extra small devices (portrait phones, less than 576px) */
+@media (max-width: 349.99px) {
+  .title {
+    margin-block-start: 3rem;
+    margin-block-end: 3rem;
+    font-size: 42px;
+  }
+
+  .game-container {
+    display: block;
+  }
+
+  .game-child:first-child {
+      margin-right: 0;
+  }
+
+  button,
+  ::marker {
+    font: 18px 'Indie Flower', cursive;
+    font-weight: bold;
+  }
+
+  .game-info {
+    margin-left: 1rem;
+    margin-bottom: 5rem;
+  }
+
+  .status {
+    margin-top: 2rem;
+    margin-bottom: 0;
+  }
+
+  .moves {
+    margin-top: 1rem;
+  }
+}
+
 /* xs - Extra small devices (portrait phones, less than 576px) */
-@media (max-width: 575.99px) {
+@media (min-width: 350px) and (max-width: 575.99px) {
   .title {
     margin-block-start: 3rem;
     margin-block-end: 3rem;
